--- a/src/app/manga-reader/manga-reader.component.html
+++ b/src/app/manga-reader/manga-reader.component.html
@@ -53,19 +53,19 @@
                 </button>
             </div>
             <div class="col">
-                <button class="btn btn-icon" (click)="setReadingDirection()" aria-describedby="reading-direction" title="Reading Direction: {{readingDirection === ReadingDirection.LeftToRight ? 'Left to Right' : 'Right to Left'}}">
+                <button class="btn btn-icon" (click)="setReadingDirection();resetMenuCloseTimer();" aria-describedby="reading-direction" title="Reading Direction: {{readingDirection === ReadingDirection.LeftToRight ? 'Left to Right' : 'Right to Left'}}">
                     <i class="fa fa-angle-double-{{readingDirection === ReadingDirection.LeftToRight ? 'right' : 'left'}}" aria-hidden="true"></i>
                     <span id="reading-direction" class="sr-only">{{readingDirection === ReadingDirection.LeftToRight ? 'Left to Right' : 'Right to Left'}}</span>
                 </button>
             </div>
             <div class="col">
-                <button class="btn btn-icon {{this.colorMode}}" title="Color Options: {{colorOptionName}}" (click)="toggleColorMode()">
+                <button class="btn btn-icon {{this.colorMode}}" title="Color Options: {{colorOptionName}}" (click)="toggleColorMode();resetMenuCloseTimer();">
                     <i class="fa fa-palette" aria-hidden="true"></i>
                     <span class="sr-only"></span>
                 </button>
             </div>
             <div class="col">
-                <button class="btn btn-icon" title="Settings" (click)="settingsOpen = !settingsOpen;">
+                <button class="btn btn-icon" title="Settings" (click)="settingsOpen = !settingsOpen;resetMenuCloseTimer();">
                     <i class="fa fa-sliders-h" aria-hidden="true"></i>
                     <span class="sr-only">Settings</span>
                 </button>
