--- a/src/app/manga-reader/manga-reader.component.scss
+++ b/src/app/manga-reader/manga-reader.component.scss
@@ -251,18 +251,6 @@ canvas {
     }
   }
 
-  // DEBUG ONLY
-
-  .example-viewport {
-    height: 100vh;
-    width: 100wh;
-  }
-  
-  .example-item-detail {
-    height: 18px;
-    color: white;
-  }
-  
-  .example-alternate {
-    background: rgba(127, 127, 127, 0.3);
+  .webtoon-images {
+      text-align: center;
   }
