--- a/src/app/manga-reader/manga-reader.component.scss
+++ b/src/app/manga-reader/manga-reader.component.scss
@@ -254,3 +254,8 @@ canvas {
   .webtoon-images {
       text-align: center;
   }
+
+  // DEBUG
+  .active-image {
+      border: 5px solid red;
+  }
