--- a/src/app/manga-reader/manga-reader.component.html
+++ b/src/app/manga-reader/manga-reader.component.html
@@ -31,16 +31,18 @@
                 [infiniteScrollDistance]="10"
                 [infiniteScrollUpDistance]="10"
                 [infiniteScrollThrottle]="50"
-                [alwaysCallback]="true">
+                [alwaysCallback]="true"
+                (scrolled)="scrollDown()"
+                (scrolledUp)="scrollUp()">
                 <ng-container *ngFor="let item of webtoonImages | async; let index = index;">
                     <h2>Page {{item.page}} - Prefetched {{minPrefetchedWebtoonImage}}-{{maxPrefetchedWebtoonImage}}. Current Page: {{pageNum}}</h2>
-                    <img src="{{item.src}}" id="page-{{item.page}}" [attr.page]="item.page" ondragstart="return false;" onselectstart="return false;">
+                    <img src="{{item.src}}" rel="nofollow" alt="image" id="page-{{item.page}}" [attr.page]="item.page" ondragstart="return false;" onselectstart="return false;">
                 </ng-container>
             </div> -->
 
             <ng-container *ngFor="let item of webtoonImages | async; let index = index;">
                 <h2>Page {{item.page}} - Prefetched {{minPrefetchedWebtoonImage}}-{{maxPrefetchedWebtoonImage}}. Current Page: {{pageNum}}</h2>
-                <img src="{{item.src}}" id="page-{{item.page}}" [attr.page]="item.page" ondragstart="return false;" onselectstart="return false;">
+                <img src="{{item.src}}" rel="nofollow" alt="image" id="page-{{item.page}}" [attr.page]="item.page" ondragstart="return false;" onselectstart="return false;">
             </ng-container>
 
         </div>
