--- a/src/app/manga-reader/manga-reader.component.html
+++ b/src/app/manga-reader/manga-reader.component.html
@@ -42,8 +42,10 @@
 
             <ng-container *ngFor="let item of webtoonImages | async; let index = index;">
                 <h2>Page {{item.page}} - Prefetched {{minPrefetchedWebtoonImage}}-{{maxPrefetchedWebtoonImage}}. Current Page: {{pageNum}}</h2>
-                <img src="{{item.src}}" rel="nofollow" alt="image" id="page-{{item.page}}" [attr.page]="item.page" ondragstart="return false;" onselectstart="return false;">
+                <img src="{{item.src}}" [width]="webtoonImageWidth" rel="nofollow" alt="image" id="page-{{item.page}}" [attr.page]="item.page" ondragstart="return false;" onselectstart="return false;">
             </ng-container>
+
+            <!-- Can I use the lazy loader here? -->
 
         </div>
         <ng-container *ngIf="readerMode === READER_MODE.MANGA_LR || readerMode === READER_MODE.MANGA_UD"> <!--; else webtoonClickArea;-->
@@ -65,7 +67,7 @@
                 <button class="btn btn-small btn-icon col-1" [disabled]="prevChapterDisabled" (click)="loadChapter(this.prevChapterId, 'prev');resetMenuCloseTimer();" title="Prev Chapter/Volume"><i class="fa fa-fast-backward" aria-hidden="true"></i></button>
                 <button class="btn btn-small btn-icon col-1" [disabled]="prevPageDisabled" (click)="goToPage(0);resetMenuCloseTimer();" title="First Page"><i class="fa fa-step-backward" aria-hidden="true"></i></button>
                 <div class="col custom-slider">
-                    <ngx-slider [options]="pageOptions" [value]="pageNum" aria-describedby="slider-info" (userChangeEnd)="sliderPageUpdate($event)"></ngx-slider>
+                    <ngx-slider [options]="pageOptions" [value]="pageNum" aria-describedby="slider-info" (userChangeEnd)="sliderPageUpdate($event);startMenuCloseTimer()" (userChangeStart)="cancelMenuCloseTimer();"></ngx-slider>
                 </div>
                 <button class="btn btn-small btn-icon col-2" [disabled]="nextPageDisabled" (click)="goToPage(this.maxPages);resetMenuCloseTimer();" title="Last Page"><i class="fa fa-step-forward" aria-hidden="true"></i></button>
                 <button class="btn btn-small btn-icon col-1" [disabled]="nextChapterDisabled" (click)="loadChapter(this.nextChapterId, 'next');resetMenuCloseTimer();" title="Next Chapter/Volume"><i class="fa fa-fast-forward" aria-hidden="true"></i></button>
@@ -134,6 +136,19 @@
                             <option value="full-width">Width</option>
                             <option value="original">Original</option>
                         </select>
+                    </form>
+                </div>
+            </div>
+
+            <div class="row mt-2 mb-2" *ngIf="generalSettingsForm">
+                <div class="col-6">
+                    <label for="autoCloseMenu" class="form-check-label">Auto Close Menu</label>
+                </div>
+                <div class="col-6">
+                    <form [formGroup]="generalSettingsForm">
+                        <div class="form-check">
+                            <input id="autoCloseMenu" type="checkbox" aria-label="Admin" class="form-check-input" formControlName="autoCloseMenu">
+                        </div>
                     </form>
                 </div>
             </div>
