Finished initial cleanup

--- a/src/app/manga-reader/manga-reader.component.html
+++ b/src/app/manga-reader/manga-reader.component.html
@@ -84,7 +84,7 @@
             </div>
             <div class="col">
                 <button class="btn btn-icon" title="Reading Mode" (click)="toggleReaderMode();resetMenuCloseTimer();">
-                    <i class="fa {{getReaderModeIcon()}}" aria-hidden="true"></i>
+                    <i class="fa {{readerModeIcon}}" aria-hidden="true"></i>
                     <span class="sr-only">Reading Mode</span>
                 </button>
             </div>
